--- a/public/assets/style/style.css
+++ b/public/assets/style/style.css
@@ -85,6 +85,35 @@ body{
 textarea{
 	margin: .5rem 0  .5rem;
 	resize: none;
-	width: 11.7rem;
+	width: 11rem;
 	height: 5rem;
+	padding: 5px;
+}
+
+.work > label, .education > label{
+	color: #6D6969;
+}
+
+.work > input, .education > input{
+	padding: 5px;
+	margin:  .5rem 0 .5rem;
+}
+
+
+
+.add-button{
+	background: #212121;
+	color: #fff;
+	border: 2px solid #212121;
+	border-radius: 100px;
+	width: 1.8rem;
+	height: 1.8rem;
+	margin: 10px 0 10px;
+	cursor: pointer;
+	font-size: 1.4rem;
+}
+
+.add-button:hover{
+	background-color: #6D6969;
+	border: 2px solid #6D6969;
 }
