--- a/public/assets/style/cv-style.css
+++ b/public/assets/style/cv-style.css
@@ -6,18 +6,12 @@
 	font-family: 'Josefin Sans', sans-serif;
 }
 
-.info-grid{
-	display: grid;
-	gap: 7rem;
-	margin: auto;
-	width: 50vw;
-	justify-content: center;
-	align-items: center;
-	padding: 30px;
-}
-
-.name-and-role{
+.info{
 	padding: 1rem;
+	width: 55vw;
+	margin: auto;
+	display: flex;
+	flex-direction: column;
 }
 
 #about-me{
@@ -28,11 +22,7 @@
 	text-transform: uppercase;
 }
 
-.contact{
-	padding: 1rem;
-}
-
-.contact h3{
+h3{
 	color: #0E5F88;
 }
 
@@ -40,36 +30,16 @@
 	text-align: justfy;
 }
 
-.tech-stack{
-	width: 50vw;
-	margin: auto;
-	display: flex;
-	justify-content: space-between;
-}
-
-.tech-stack > h3{
-	padding: 1rem;
-	color: #0E5f88;
-}
-
-.education-experience{
-	padding: 1rem;
+#qr-url{
+	width: 8rem;
+	padding: 1rem 0 1rem;
 }
 
 .education-experience > h3{
 	color: #0E5f88;
 }
 
-.work-experience{
-	padding: 1rem;
-}
-
 .work-experience > h3{	
 	color: #0E5f88;
 }
 
-@media (min-width: 600px){
-  .info-grid{
-	  grid-template-columns: repeat(2, 1fr);
-  }
-}
