--- a/public/assets/style/style.css
+++ b/public/assets/style/style.css
@@ -90,32 +90,6 @@ textarea{
 	padding: 5px;
 }
 
-.work > label, .education > label{
-	color: #6D6969;
-}
-
-.work > input, .education > input{
-	padding: 5px;
-	margin:  .5rem 0 .5rem;
-}
-
-.add-button{
-	background: #212121;
-	color: #fff;
-	border: 2px solid #212121;
-	border-radius: 100px;
-	width: 1.8rem;
-	height: 1.8rem;
-	margin: 10px 0 10px;
-	cursor: pointer;
-	font-size: 1.4rem;
-}
-
-.add-button:hover{
-	background-color: #6D6969;
-	border: 2px solid #6D6969;
-}
-
 .submit-button{
 	background: #212121;
 	color: #fff;
@@ -131,11 +105,11 @@ textarea{
 	border: 2px solid #ddd;
 	margin: auto;
 	width: 50vw;
-	padding: 30px;
+	padding: 50px 0 50px;
 }
 
 .save-user-cv > h6{
-	padding: 10px;
+	padding: 5px;
 }
 
 .save-user-cv > p{
