--- a/public/assets/style/cv-style.css
+++ b/public/assets/style/cv-style.css
@@ -55,7 +55,7 @@ h3{
 	font-size: 2rem;
 	border: 0px;
 	outline: none;
-	background-color: #f8f8f8;
+	background-color: rgba(0,0,0,0.0);
 	display: flex;
 	flex-direction: wrap;
 }
