--- a/public/assets/style/style.css
+++ b/public/assets/style/style.css
@@ -23,8 +23,7 @@ body{
 	font-size: 2rem;
 	border: 0px;
 	outline: none;
-	background-color: #f8f8f8;
-	
+	background-color: rgba(0,0,0,0.0);
 }
 
 .new-cv-button{
